--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@
 .marginleft {
   margin-left: 25px;
 }
+
+.iconHistory{
+  height: 40px;
+  width: 40px;
+}
 .nav-item {
   color: antiquewhite;
   width: 100%;
@@ -117,12 +122,31 @@
 }
 
 .lastr {
-  width: 30%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   gap: 15px;
   align-items: center;
   margin-top: 25px;
+}
+.full{
+  width: 40%;
+  height: 78%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.Rightl{
+  width: 65%;
+  height: 20%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  align-items: center;
+  
 }
 
 .card-body {
@@ -262,6 +286,16 @@ h1:after {
   .h1site {
     font-size: 30px;
     line-height: 7.7rem;
+  }
+
+  .Rightl{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: center;
+    margin-top: 15px;
   }
 
   .navbar2 {
